add Julia installation instrucitons

--- a/nhw_ipynb.html
+++ b/nhw_ipynb.html
@@ -12232,7 +12232,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="IPython-Magic">IPython Magic<a class="anchor-link" href="#IPython-Magic">&#182;</a></h1><p>If you are running yorr notebook with an python kernel, ther are some special built in funcitonality that you can access with "magic" functions. There are line magics that are preceded by a single <code>%</code> and affect only that line and cell magics preceded by <code>%%</code> that you place at the begining of a cell to modify the behavior of that cell. There are <a href="http://ipython.readthedocs.io/en/stable/interactive/magics.htm">lots of magics</a>, but here are some handy ones.</p>
+<h1 id="IPython-Magic">IPython Magic<a class="anchor-link" href="#IPython-Magic">&#182;</a></h1><p>If you are running your notebook with an python kernel, there are some special built in funcitonality that you can access with "magic" functions. There are line magics that are preceded by a single <code>%</code> and affect only that line and cell magics preceded by <code>%%</code> that you place at the beginning of a cell to modify the behavior of that cell. There are <a href="http://ipython.readthedocs.io/en/stable/interactive/magics.htm">lots of magics</a>, but here are some handy ones.</p>
 
 </div>
 </div>
@@ -12241,7 +12241,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Environtment-variables:-%env">Environtment variables: %env<a class="anchor-link" href="#Environtment-variables:-%env">&#182;</a></h2><p>If you need to modify the environemnt variables that apply to a running notebook and don't want to restart your notebook server, <code>%env</code> allows you to check and set them from within the notebook</p>
+<h2 id="Environtment-variables:-%env">Environtment variables: %env<a class="anchor-link" href="#Environtment-variables:-%env">&#182;</a></h2><p>If you need to modify the environment variables that apply to a running notebook and don't want to restart your notebook server, <code>%env</code> allows you to check and set them from within the notebook</p>
 
 </div>
 </div>
@@ -12445,7 +12445,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Writing-files:-%%writefile">Writing files: %%writefile<a class="anchor-link" href="#Writing-files:-%%writefile">&#182;</a></h3><p>With <code>%%writefile</code> you can write the contents of a cell to a file. Let's create a simple python script that sets a python variable equal to the value of the environtment variable we just created.</p>
+<h3 id="Writing-files:-%%writefile">Writing files: %%writefile<a class="anchor-link" href="#Writing-files:-%%writefile">&#182;</a></h3><p>With <code>%%writefile</code> you can write the contents of a cell to a file. Let's create a simple python script that sets a python variable equal to the value of the environment variable we just created.</p>
 
 </div>
 </div>
@@ -15084,10 +15084,10 @@ xqrt/wACGcJAGa9lHwAAAABJRU5ErkJggg==
 
  
  
-<div id="6f0bcc4e-73bf-48bb-bc41-b531d1b8bbea"></div>
+<div id="433e59a5-eb5d-4b77-86a6-b9b1a0f93edc"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#6f0bcc4e-73bf-48bb-bc41-b531d1b8bbea');
+var element = $('#433e59a5-eb5d-4b77-86a6-b9b1a0f93edc');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "5d84a749e27f4030a54d412a30084bf2", "version_major": 2, "version_minor": 0}
@@ -15127,10 +15127,10 @@ var element = $('#6f0bcc4e-73bf-48bb-bc41-b531d1b8bbea');
 
  
  
-<div id="e149e469-b03c-4e89-ae20-5b51a4e2f3f3"></div>
+<div id="759ef0c4-cc21-4390-8cce-8c31f013a6e8"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#e149e469-b03c-4e89-ae20-5b51a4e2f3f3');
+var element = $('#759ef0c4-cc21-4390-8cce-8c31f013a6e8');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "842051e1dacb4999aa8de4fd5257211a", "version_major": 2, "version_minor": 0}
@@ -15170,10 +15170,10 @@ var element = $('#e149e469-b03c-4e89-ae20-5b51a4e2f3f3');
 
  
  
-<div id="c09d2f8d-4edb-4b0a-9285-fde2b2c6ba65"></div>
+<div id="896efb2f-52a4-4be9-b824-39835d44524e"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#c09d2f8d-4edb-4b0a-9285-fde2b2c6ba65');
+var element = $('#896efb2f-52a4-4be9-b824-39835d44524e');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "17c903129cba48eda649aa8125b35de2", "version_major": 2, "version_minor": 0}
@@ -15237,10 +15237,10 @@ var element = $('#c09d2f8d-4edb-4b0a-9285-fde2b2c6ba65');
 
  
  
-<div id="37ad5e51-d518-4a04-95d7-ffed5a04c668"></div>
+<div id="a8eb836d-4779-446b-b290-5369856fd80d"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#37ad5e51-d518-4a04-95d7-ffed5a04c668');
+var element = $('#a8eb836d-4779-446b-b290-5369856fd80d');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "76d348cc8ba840728c202b95207c3cb9", "version_major": 2, "version_minor": 0}
@@ -15293,10 +15293,10 @@ var element = $('#37ad5e51-d518-4a04-95d7-ffed5a04c668');
 
  
  
-<div id="37dd8c7d-3ab5-4a3e-8807-35407c24ca54"></div>
+<div id="c8e1bc2f-0595-4269-9aad-ba49084dbe98"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#37dd8c7d-3ab5-4a3e-8807-35407c24ca54');
+var element = $('#c8e1bc2f-0595-4269-9aad-ba49084dbe98');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "76145823a7894db89a300363dba2d946", "version_major": 2, "version_minor": 0}
@@ -15340,10 +15340,10 @@ var element = $('#37dd8c7d-3ab5-4a3e-8807-35407c24ca54');
 
  
  
-<div id="d7218a68-c916-41c5-bbef-23babe79a3fc"></div>
+<div id="132ea6d3-3135-4efd-968a-958e2c7e75c3"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#d7218a68-c916-41c5-bbef-23babe79a3fc');
+var element = $('#132ea6d3-3135-4efd-968a-958e2c7e75c3');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "95668dc5234642b591bc57cb67d28449", "version_major": 2, "version_minor": 0}
@@ -15362,6 +15362,152 @@ var element = $('#d7218a68-c916-41c5-bbef-23babe79a3fc');
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="Beyond-Python">Beyond Python<a class="anchor-link" href="#Beyond-Python">&#182;</a></h1><p>Jupyter notebooks aren't just for Python. Jupyter actually referst to JUlia PYThon and R. It's easy to install other kernels with anaconda.</p>
 
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Julia">Julia<a class="anchor-link" href="#Julia">&#182;</a></h2><p>From <a href="https://docs.julialang.org/en/stable/manual/introduction/">Julia's docs</a>: "The Julia programming language... is a flexible dynamic language, appropriate for scientific and numerical computing, with performance comparable to traditional statically-typed languages."</p>
+<p>To run julia in Jupyter note books, you'll first need to install julia. You can download the package for your machine from <a href="https://julialang.org/downloads/">here</a>.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[12]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># This will print out what you need to put ininstall_ijulia.jl</span>
+<span class="n">jupyter_path</span> <span class="o">=</span> <span class="o">!</span>which jupyter
+<span class="nb">print</span><span class="p">(</span><span class="s1">&#39;ENV[&quot;JUPYTER&quot;]=&quot;</span><span class="si">%s</span><span class="s1">&quot;&#39;</span><span class="o">%</span><span class="k">jupyter_path</span>[0])
+<span class="nb">print</span><span class="p">(</span><span class="s1">&#39;Pkg.add(&quot;IJulia&quot;)&#39;</span><span class="p">)</span>
+<span class="nb">print</span><span class="p">(</span><span class="s1">&#39;Pkg.build(&quot;IJulia&quot;)&#39;</span><span class="p">)</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+<div class="prompt"></div>
+
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>ENV[&#34;JUPYTER&#34;]=&#34;/Users/nielsond/miniconda3/envs/nhw_ipynb/bin/jupyter&#34;
+Pkg.add(&#34;IJulia&#34;)
+Pkg.build(&#34;IJulia&#34;)
+</pre>
+</div>
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[16]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="o">%%</span><span class="k">writefile</span> install_ijulia.jl
+ENV[&quot;JUPYTER&quot;]=&quot;/Users/nielsond/miniconda3/envs/nhw_ipynb/bin/jupyter&quot;
+Pkg.add(&quot;IJulia&quot;)
+Pkg.build(&quot;IJulia&quot;)
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+<div class="prompt"></div>
+
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>Overwriting install_ijulia.jl
+</pre>
+</div>
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[17]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="o">!</span>/Applications/Julia-0.6.app/Contents/Resources/julia/bin/julia ./install_ijulia.jl
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+<div class="prompt"></div>
+
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>INFO: Package IJulia is already installed
+INFO: Building Conda
+INFO: Building Homebrew
+INFO: Building MbedTLS
+INFO: Building ZMQ
+WARNING: Compat.KERNEL is deprecated.
+  likely near /Users/nielsond/.julia/v0.6/ZMQ/deps/build.jl:35
+WARNING: Compat.KERNEL is deprecated.
+  likely near /Users/nielsond/.julia/v0.6/ZMQ/deps/build.jl:35
+in can_use at /Users/nielsond/.julia/v0.6/Homebrew/src/bindeps_integration.jl
+WARNING: Compat.KERNEL is deprecated.
+  likely near /Users/nielsond/.julia/v0.6/ZMQ/deps/build.jl:35
+in package_available at /Users/nielsond/.julia/v0.6/Homebrew/src/bindeps_integration.jl
+INFO: Building IJulia
+INFO: Found Jupyter version 4.3.0: /Users/nielsond/miniconda3/envs/nhw_ipynb/bin/jupyter
+INFO: Installing Julia kernelspec julia-0.6
+[InstallKernelSpec] Removing existing kernelspec in /Users/nielsond/Library/Jupyter/kernels/julia-0.6
+[InstallKernelSpec] Installed kernelspec julia-0.6 in /Users/nielsond/Library/Jupyter/kernels/julia-0.6
+</pre>
+</div>
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>Now unfortunately you'll need to restart your jupyter server for it to find the new kernels. If you're following along on jupyter hub, you won't be able to do this.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="R">R<a class="anchor-link" href="#R">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -16902,9 +17048,8 @@ git diffs on jupyter notebooks can be a mess. If you automatically save out the 
 <span class="k">if</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">exists</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">expanduser</span><span class="p">(</span><span class="s1">&#39;~/.jupyter/jupyter_notebook_config.py&#39;</span><span class="p">)):</span>
     <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Good to go&quot;</span><span class="p">)</span>
 <span class="k">else</span><span class="p">:</span>
-    <span class="c1"># not great to do because it&#39;s not going to work if you write this notebook out to a script</span>
     <span class="o">!</span>jupyter notebook --generate-config
-    <span class="c1"># better to use subprocess</span>
+    <span class="c1"># could also use the subprocess library</span>
     <span class="c1"># check_output(&quot;jupyter notebook --generate-config&quot;)</span>
 </pre></div>
 
