Make load unrung

--- a/nhw_ipynb.html
+++ b/nhw_ipynb.html
@@ -12420,8 +12420,7 @@ div#notebook {
 <div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># %load boring.py</span>
-<span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Not much going on here&quot;</span><span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="o">%</span><span class="k">load</span> boring.py
 </pre></div>
 
 </div>
@@ -15147,10 +15146,10 @@ xqrt/wACGcJAGa9lHwAAAABJRU5ErkJggg==
 
  
  
-<div id="02a217b3-dc0f-44e2-812d-4b301ef6e59b"></div>
+<div id="002aea21-dbd2-4d29-81c9-3326f64a7417"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#02a217b3-dc0f-44e2-812d-4b301ef6e59b');
+var element = $('#002aea21-dbd2-4d29-81c9-3326f64a7417');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "5d84a749e27f4030a54d412a30084bf2", "version_major": 2, "version_minor": 0}
@@ -15190,10 +15189,10 @@ var element = $('#02a217b3-dc0f-44e2-812d-4b301ef6e59b');
 
  
  
-<div id="659b15f9-6b69-4fe6-8745-beaf6e3ca061"></div>
+<div id="47c764f2-b601-4d79-b5b5-d43df22b5b26"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#659b15f9-6b69-4fe6-8745-beaf6e3ca061');
+var element = $('#47c764f2-b601-4d79-b5b5-d43df22b5b26');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "842051e1dacb4999aa8de4fd5257211a", "version_major": 2, "version_minor": 0}
@@ -15233,10 +15232,10 @@ var element = $('#659b15f9-6b69-4fe6-8745-beaf6e3ca061');
 
  
  
-<div id="703f8550-a746-4aa4-ba69-a6e968c79bed"></div>
+<div id="2f2d181d-9bf9-43b4-a336-4c91fa5d42d9"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#703f8550-a746-4aa4-ba69-a6e968c79bed');
+var element = $('#2f2d181d-9bf9-43b4-a336-4c91fa5d42d9');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "17c903129cba48eda649aa8125b35de2", "version_major": 2, "version_minor": 0}
@@ -15277,10 +15276,10 @@ var element = $('#703f8550-a746-4aa4-ba69-a6e968c79bed');
 
  
  
-<div id="e32c3306-104b-4a19-8e00-576efc247d90"></div>
+<div id="de0cc0d7-fb5b-4a5a-9aac-48ecbda9f80a"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#e32c3306-104b-4a19-8e00-576efc247d90');
+var element = $('#de0cc0d7-fb5b-4a5a-9aac-48ecbda9f80a');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "2f605001eacd447fb5c1fa91a8ba333f", "version_major": 2, "version_minor": 0}
@@ -15299,10 +15298,10 @@ var element = $('#e32c3306-104b-4a19-8e00-576efc247d90');
 
  
  
-<div id="b6a09336-6b0f-4698-8035-34931ebd1983"></div>
+<div id="65ff3515-cc2d-4d75-ad37-fb185862a7b7"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#b6a09336-6b0f-4698-8035-34931ebd1983');
+var element = $('#65ff3515-cc2d-4d75-ad37-fb185862a7b7');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "f60de3fd068f48f0aecbf747acbf05af", "version_major": 2, "version_minor": 0}
@@ -15366,10 +15365,10 @@ var element = $('#b6a09336-6b0f-4698-8035-34931ebd1983');
 
  
  
-<div id="f4bbec2a-bed4-4b97-9699-627d5b2ad8dd"></div>
+<div id="bcac6398-d12a-42a2-a175-91baee1f0798"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#f4bbec2a-bed4-4b97-9699-627d5b2ad8dd');
+var element = $('#bcac6398-d12a-42a2-a175-91baee1f0798');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "cd0cb0eb50594250ba9d722981446e57", "version_major": 2, "version_minor": 0}
@@ -15431,10 +15430,10 @@ var element = $('#f4bbec2a-bed4-4b97-9699-627d5b2ad8dd');
 
  
  
-<div id="d330522b-43a3-41f0-bce7-3928d419f2c1"></div>
+<div id="03d56fd3-8fc0-4635-97dd-55748e44e463"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#d330522b-43a3-41f0-bce7-3928d419f2c1');
+var element = $('#03d56fd3-8fc0-4635-97dd-55748e44e463');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "bba0c9f44a5a4090a7ed64acfa86f588", "version_major": 2, "version_minor": 0}
@@ -15485,19 +15484,6 @@ var element = $('#d330522b-43a3-41f0-bce7-3928d419f2c1');
 
 </div>
 
-</div>
-</div>
-
-</div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span> 
-</pre></div>
-
-</div>
 </div>
 </div>
 
@@ -15582,10 +15568,10 @@ Requirement already satisfied: notebook&gt;=4.4.1 in /Users/nielsond/miniconda3/
 
  
  
-<div id="4b96550a-5418-49fa-a318-0cdd7edd7d61"></div>
+<div id="dfbd9aa3-087c-4e54-b3dd-f01eb5c60d0b"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#4b96550a-5418-49fa-a318-0cdd7edd7d61');
+var element = $('#dfbd9aa3-087c-4e54-b3dd-f01eb5c60d0b');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "76145823a7894db89a300363dba2d946", "version_major": 2, "version_minor": 0}
@@ -15629,10 +15615,10 @@ var element = $('#4b96550a-5418-49fa-a318-0cdd7edd7d61');
 
  
  
-<div id="32b3e8c5-2921-4c5f-a627-fc47dc8d34fb"></div>
+<div id="72fb32cc-0793-473c-93da-3192f2c6eba6"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#32b3e8c5-2921-4c5f-a627-fc47dc8d34fb');
+var element = $('#72fb32cc-0793-473c-93da-3192f2c6eba6');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "95668dc5234642b591bc57cb67d28449", "version_major": 2, "version_minor": 0}
