turn pdb back off

--- a/nhw_ipynb.html
+++ b/nhw_ipynb.html
@@ -12653,6 +12653,38 @@ ipdb&gt; q
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
+<div class="prompt input_prompt">In&nbsp;[73]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Turn autopdb back off</span>
+<span class="o">%</span><span class="k">pdb</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+<div class="prompt"></div>
+
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>Automatic pdb calling has been turned OFF
+</pre>
+</div>
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
 <div class="prompt input_prompt">In&nbsp;[49]:</div>
 <div class="inner_cell">
     <div class="input_area">
@@ -15146,10 +15178,10 @@ xqrt/wACGcJAGa9lHwAAAABJRU5ErkJggg==
 
  
  
-<div id="002aea21-dbd2-4d29-81c9-3326f64a7417"></div>
+<div id="54a52593-aa51-4a65-9b92-0048e4011e13"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#002aea21-dbd2-4d29-81c9-3326f64a7417');
+var element = $('#54a52593-aa51-4a65-9b92-0048e4011e13');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "5d84a749e27f4030a54d412a30084bf2", "version_major": 2, "version_minor": 0}
@@ -15189,10 +15221,10 @@ var element = $('#002aea21-dbd2-4d29-81c9-3326f64a7417');
 
  
  
-<div id="47c764f2-b601-4d79-b5b5-d43df22b5b26"></div>
+<div id="264b938f-1671-40a9-b340-eac91a07a6b8"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#47c764f2-b601-4d79-b5b5-d43df22b5b26');
+var element = $('#264b938f-1671-40a9-b340-eac91a07a6b8');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "842051e1dacb4999aa8de4fd5257211a", "version_major": 2, "version_minor": 0}
@@ -15232,10 +15264,10 @@ var element = $('#47c764f2-b601-4d79-b5b5-d43df22b5b26');
 
  
  
-<div id="2f2d181d-9bf9-43b4-a336-4c91fa5d42d9"></div>
+<div id="4f256cde-3844-446a-8929-0bd7dbb7cb9c"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#2f2d181d-9bf9-43b4-a336-4c91fa5d42d9');
+var element = $('#4f256cde-3844-446a-8929-0bd7dbb7cb9c');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "17c903129cba48eda649aa8125b35de2", "version_major": 2, "version_minor": 0}
@@ -15276,10 +15308,10 @@ var element = $('#2f2d181d-9bf9-43b4-a336-4c91fa5d42d9');
 
  
  
-<div id="de0cc0d7-fb5b-4a5a-9aac-48ecbda9f80a"></div>
+<div id="ab9a6f87-be0a-4e13-9930-97f9491bc7c1"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#de0cc0d7-fb5b-4a5a-9aac-48ecbda9f80a');
+var element = $('#ab9a6f87-be0a-4e13-9930-97f9491bc7c1');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "2f605001eacd447fb5c1fa91a8ba333f", "version_major": 2, "version_minor": 0}
@@ -15298,10 +15330,10 @@ var element = $('#de0cc0d7-fb5b-4a5a-9aac-48ecbda9f80a');
 
  
  
-<div id="65ff3515-cc2d-4d75-ad37-fb185862a7b7"></div>
+<div id="3f41b94b-22ae-4d5d-9008-d632c159de26"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#65ff3515-cc2d-4d75-ad37-fb185862a7b7');
+var element = $('#3f41b94b-22ae-4d5d-9008-d632c159de26');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "f60de3fd068f48f0aecbf747acbf05af", "version_major": 2, "version_minor": 0}
@@ -15365,10 +15397,10 @@ var element = $('#65ff3515-cc2d-4d75-ad37-fb185862a7b7');
 
  
  
-<div id="bcac6398-d12a-42a2-a175-91baee1f0798"></div>
+<div id="d568b7c8-8b86-400d-a5a3-16cdf5c5f479"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#bcac6398-d12a-42a2-a175-91baee1f0798');
+var element = $('#d568b7c8-8b86-400d-a5a3-16cdf5c5f479');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "cd0cb0eb50594250ba9d722981446e57", "version_major": 2, "version_minor": 0}
@@ -15430,10 +15462,10 @@ var element = $('#bcac6398-d12a-42a2-a175-91baee1f0798');
 
  
  
-<div id="03d56fd3-8fc0-4635-97dd-55748e44e463"></div>
+<div id="6c680e25-834e-4419-91f4-952f57daa1fa"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#03d56fd3-8fc0-4635-97dd-55748e44e463');
+var element = $('#6c680e25-834e-4419-91f4-952f57daa1fa');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "bba0c9f44a5a4090a7ed64acfa86f588", "version_major": 2, "version_minor": 0}
@@ -15568,10 +15600,10 @@ Requirement already satisfied: notebook&gt;=4.4.1 in /Users/nielsond/miniconda3/
 
  
  
-<div id="dfbd9aa3-087c-4e54-b3dd-f01eb5c60d0b"></div>
+<div id="b64b0130-6644-4d6a-a364-005f5f2c9769"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#dfbd9aa3-087c-4e54-b3dd-f01eb5c60d0b');
+var element = $('#b64b0130-6644-4d6a-a364-005f5f2c9769');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "76145823a7894db89a300363dba2d946", "version_major": 2, "version_minor": 0}
@@ -15615,10 +15647,10 @@ var element = $('#dfbd9aa3-087c-4e54-b3dd-f01eb5c60d0b');
 
  
  
-<div id="72fb32cc-0793-473c-93da-3192f2c6eba6"></div>
+<div id="c6bce298-3fe4-4e79-a2e1-cde4b63757c3"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#72fb32cc-0793-473c-93da-3192f2c6eba6');
+var element = $('#c6bce298-3fe4-4e79-a2e1-cde4b63757c3');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "95668dc5234642b591bc57cb67d28449", "version_major": 2, "version_minor": 0}
