Chance excercises to excercise2

--- a/nhw_ipynb.html
+++ b/nhw_ipynb.html
@@ -12194,7 +12194,7 @@ div#notebook {
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[38]:</div>
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1">###Exercise###</span>
@@ -12205,6 +12205,22 @@ div#notebook {
         <span class="p">,</span><span class="s2">&quot;Pooh&quot;</span>
         <span class="p">,</span><span class="s2">&quot;Fuzz&quot;</span>
         <span class="p">,</span><span class="s2">&quot;Tall&quot;</span><span class="p">]</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">bears</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;Yogi Bear&quot;</span>
+        <span class="p">,</span><span class="s2">&quot;Pooh Bear&quot;</span>
+        <span class="p">,</span><span class="s2">&quot;Fuzz Bear&quot;</span>
+        <span class="p">,</span><span class="s2">&quot;Tall Bear&quot;</span><span class="p">]</span>
 </pre></div>
 
 </div>
@@ -15178,10 +15194,10 @@ xqrt/wACGcJAGa9lHwAAAABJRU5ErkJggg==
 
  
  
-<div id="54a52593-aa51-4a65-9b92-0048e4011e13"></div>
+<div id="8f901d47-766d-4b9a-aa13-6c6ba32377ba"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#54a52593-aa51-4a65-9b92-0048e4011e13');
+var element = $('#8f901d47-766d-4b9a-aa13-6c6ba32377ba');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "5d84a749e27f4030a54d412a30084bf2", "version_major": 2, "version_minor": 0}
@@ -15221,10 +15237,10 @@ var element = $('#54a52593-aa51-4a65-9b92-0048e4011e13');
 
  
  
-<div id="264b938f-1671-40a9-b340-eac91a07a6b8"></div>
+<div id="84eeddb7-42ad-4b16-8356-843c7a799402"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#264b938f-1671-40a9-b340-eac91a07a6b8');
+var element = $('#84eeddb7-42ad-4b16-8356-843c7a799402');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "842051e1dacb4999aa8de4fd5257211a", "version_major": 2, "version_minor": 0}
@@ -15264,10 +15280,10 @@ var element = $('#264b938f-1671-40a9-b340-eac91a07a6b8');
 
  
  
-<div id="4f256cde-3844-446a-8929-0bd7dbb7cb9c"></div>
+<div id="088345ee-df0a-4095-b0a0-f67bff0c1637"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#4f256cde-3844-446a-8929-0bd7dbb7cb9c');
+var element = $('#088345ee-df0a-4095-b0a0-f67bff0c1637');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "17c903129cba48eda649aa8125b35de2", "version_major": 2, "version_minor": 0}
@@ -15308,10 +15324,10 @@ var element = $('#4f256cde-3844-446a-8929-0bd7dbb7cb9c');
 
  
  
-<div id="ab9a6f87-be0a-4e13-9930-97f9491bc7c1"></div>
+<div id="34954055-122b-4ffd-a5b2-016739b79495"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#ab9a6f87-be0a-4e13-9930-97f9491bc7c1');
+var element = $('#34954055-122b-4ffd-a5b2-016739b79495');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "2f605001eacd447fb5c1fa91a8ba333f", "version_major": 2, "version_minor": 0}
@@ -15330,10 +15346,10 @@ var element = $('#ab9a6f87-be0a-4e13-9930-97f9491bc7c1');
 
  
  
-<div id="3f41b94b-22ae-4d5d-9008-d632c159de26"></div>
+<div id="4a3464f3-a543-4776-9b68-2cc0e63ecc9e"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#3f41b94b-22ae-4d5d-9008-d632c159de26');
+var element = $('#4a3464f3-a543-4776-9b68-2cc0e63ecc9e');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "f60de3fd068f48f0aecbf747acbf05af", "version_major": 2, "version_minor": 0}
@@ -15397,10 +15413,10 @@ var element = $('#3f41b94b-22ae-4d5d-9008-d632c159de26');
 
  
  
-<div id="d568b7c8-8b86-400d-a5a3-16cdf5c5f479"></div>
+<div id="d6274862-f21c-4688-9fe7-388dad6a6695"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#d568b7c8-8b86-400d-a5a3-16cdf5c5f479');
+var element = $('#d6274862-f21c-4688-9fe7-388dad6a6695');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "cd0cb0eb50594250ba9d722981446e57", "version_major": 2, "version_minor": 0}
@@ -15462,10 +15478,10 @@ var element = $('#d568b7c8-8b86-400d-a5a3-16cdf5c5f479');
 
  
  
-<div id="6c680e25-834e-4419-91f4-952f57daa1fa"></div>
+<div id="cd2fb121-a6cd-4ea6-9d2a-7523818462c9"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#6c680e25-834e-4419-91f4-952f57daa1fa');
+var element = $('#cd2fb121-a6cd-4ea6-9d2a-7523818462c9');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "bba0c9f44a5a4090a7ed64acfa86f588", "version_major": 2, "version_minor": 0}
@@ -15600,10 +15616,10 @@ Requirement already satisfied: notebook&gt;=4.4.1 in /Users/nielsond/miniconda3/
 
  
  
-<div id="b64b0130-6644-4d6a-a364-005f5f2c9769"></div>
+<div id="e94d46bf-ef9d-4ae9-91e0-e103266941a1"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#b64b0130-6644-4d6a-a364-005f5f2c9769');
+var element = $('#e94d46bf-ef9d-4ae9-91e0-e103266941a1');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "76145823a7894db89a300363dba2d946", "version_major": 2, "version_minor": 0}
@@ -15647,10 +15663,10 @@ var element = $('#b64b0130-6644-4d6a-a364-005f5f2c9769');
 
  
  
-<div id="c6bce298-3fe4-4e79-a2e1-cde4b63757c3"></div>
+<div id="10cfa965-9f2c-4df6-ac7b-1681bd06d7ee"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#c6bce298-3fe4-4e79-a2e1-cde4b63757c3');
+var element = $('#10cfa965-9f2c-4df6-ac7b-1681bd06d7ee');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "95668dc5234642b591bc57cb67d28449", "version_major": 2, "version_minor": 0}
