save interactive state

--- a/nhw_ipynb.html
+++ b/nhw_ipynb.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><meta charset="utf-8" />
-<title>nhw_ipynb</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>nhw_ipynb</title><script src="https://unpkg.com/jupyter-js-widgets@2.0.*/dist/embed.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
 <style type="text/css">
@@ -15194,10 +15194,10 @@ xqrt/wACGcJAGa9lHwAAAABJRU5ErkJggg==
 
  
  
-<div id="8f901d47-766d-4b9a-aa13-6c6ba32377ba"></div>
+<div id="aad4ecbb-af2d-44eb-9772-b2a3f43b86a5"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#8f901d47-766d-4b9a-aa13-6c6ba32377ba');
+var element = $('#aad4ecbb-af2d-44eb-9772-b2a3f43b86a5');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "5d84a749e27f4030a54d412a30084bf2", "version_major": 2, "version_minor": 0}
@@ -15237,10 +15237,10 @@ var element = $('#8f901d47-766d-4b9a-aa13-6c6ba32377ba');
 
  
  
-<div id="84eeddb7-42ad-4b16-8356-843c7a799402"></div>
+<div id="36d02ebd-af5f-4741-9415-40dd6320e3f4"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#84eeddb7-42ad-4b16-8356-843c7a799402');
+var element = $('#36d02ebd-af5f-4741-9415-40dd6320e3f4');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "842051e1dacb4999aa8de4fd5257211a", "version_major": 2, "version_minor": 0}
@@ -15280,10 +15280,10 @@ var element = $('#84eeddb7-42ad-4b16-8356-843c7a799402');
 
  
  
-<div id="088345ee-df0a-4095-b0a0-f67bff0c1637"></div>
+<div id="2e954ec1-4392-4ce5-bbf1-490de3bd8dbb"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#088345ee-df0a-4095-b0a0-f67bff0c1637');
+var element = $('#2e954ec1-4392-4ce5-bbf1-490de3bd8dbb');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "17c903129cba48eda649aa8125b35de2", "version_major": 2, "version_minor": 0}
@@ -15324,10 +15324,10 @@ var element = $('#088345ee-df0a-4095-b0a0-f67bff0c1637');
 
  
  
-<div id="34954055-122b-4ffd-a5b2-016739b79495"></div>
+<div id="c5ff470e-1f1b-4a57-8717-bc275c43dd82"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#34954055-122b-4ffd-a5b2-016739b79495');
+var element = $('#c5ff470e-1f1b-4a57-8717-bc275c43dd82');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "2f605001eacd447fb5c1fa91a8ba333f", "version_major": 2, "version_minor": 0}
@@ -15346,10 +15346,10 @@ var element = $('#34954055-122b-4ffd-a5b2-016739b79495');
 
  
  
-<div id="4a3464f3-a543-4776-9b68-2cc0e63ecc9e"></div>
+<div id="ff24a97e-55d4-4fe0-86ed-576039c27764"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#4a3464f3-a543-4776-9b68-2cc0e63ecc9e');
+var element = $('#ff24a97e-55d4-4fe0-86ed-576039c27764');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "f60de3fd068f48f0aecbf747acbf05af", "version_major": 2, "version_minor": 0}
@@ -15413,10 +15413,10 @@ var element = $('#4a3464f3-a543-4776-9b68-2cc0e63ecc9e');
 
  
  
-<div id="d6274862-f21c-4688-9fe7-388dad6a6695"></div>
+<div id="43471406-810b-4a30-ad25-8bcff01f8f47"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#d6274862-f21c-4688-9fe7-388dad6a6695');
+var element = $('#43471406-810b-4a30-ad25-8bcff01f8f47');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "cd0cb0eb50594250ba9d722981446e57", "version_major": 2, "version_minor": 0}
@@ -15478,10 +15478,10 @@ var element = $('#d6274862-f21c-4688-9fe7-388dad6a6695');
 
  
  
-<div id="cd2fb121-a6cd-4ea6-9d2a-7523818462c9"></div>
+<div id="c57fceac-a10b-4928-81be-24f254854b6d"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#cd2fb121-a6cd-4ea6-9d2a-7523818462c9');
+var element = $('#c57fceac-a10b-4928-81be-24f254854b6d');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "bba0c9f44a5a4090a7ed64acfa86f588", "version_major": 2, "version_minor": 0}
@@ -15616,10 +15616,10 @@ Requirement already satisfied: notebook&gt;=4.4.1 in /Users/nielsond/miniconda3/
 
  
  
-<div id="e94d46bf-ef9d-4ae9-91e0-e103266941a1"></div>
+<div id="ab01dd17-967d-4f97-9550-8a5465fe6ed0"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#e94d46bf-ef9d-4ae9-91e0-e103266941a1');
+var element = $('#ab01dd17-967d-4f97-9550-8a5465fe6ed0');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "76145823a7894db89a300363dba2d946", "version_major": 2, "version_minor": 0}
@@ -15663,10 +15663,10 @@ var element = $('#e94d46bf-ef9d-4ae9-91e0-e103266941a1');
 
  
  
-<div id="10cfa965-9f2c-4df6-ac7b-1681bd06d7ee"></div>
+<div id="b125417f-294a-44aa-b15f-22fc55399cab"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#10cfa965-9f2c-4df6-ac7b-1681bd06d7ee');
+var element = $('#b125417f-294a-44aa-b15f-22fc55399cab');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "95668dc5234642b591bc57cb67d28449", "version_major": 2, "version_minor": 0}
@@ -18695,6 +18695,10 @@ c.FileContentsManager.post_save_hook = post_save
 </body>
 
  
+
+<script type="application/vnd.jupyter.widget-state+json">
+{"state": {}, "version_major": 2, "version_minor": 0}
+</script>
 
 
 </html>
