--- a/nhw_ipynb.html
+++ b/nhw_ipynb.html
@@ -15178,10 +15178,10 @@ xqrt/wACGcJAGa9lHwAAAABJRU5ErkJggg==
 
  
  
-<div id="825633db-7987-4ec0-9f53-e2f541631f21"></div>
+<div id="94dfac6b-10ce-4b3f-8bec-f0e116466a50"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#825633db-7987-4ec0-9f53-e2f541631f21');
+var element = $('#94dfac6b-10ce-4b3f-8bec-f0e116466a50');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "5d84a749e27f4030a54d412a30084bf2", "version_major": 2, "version_minor": 0}
@@ -15221,10 +15221,10 @@ var element = $('#825633db-7987-4ec0-9f53-e2f541631f21');
 
  
  
-<div id="0b3d4d91-d18c-403c-8d66-fb8012b73d66"></div>
+<div id="bbc48ca7-1b9a-4816-a5c5-ab38cbd27cc2"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#0b3d4d91-d18c-403c-8d66-fb8012b73d66');
+var element = $('#bbc48ca7-1b9a-4816-a5c5-ab38cbd27cc2');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "842051e1dacb4999aa8de4fd5257211a", "version_major": 2, "version_minor": 0}
@@ -15264,10 +15264,10 @@ var element = $('#0b3d4d91-d18c-403c-8d66-fb8012b73d66');
 
  
  
-<div id="69c85224-64c2-438b-95d4-b52ecd5986fb"></div>
+<div id="38ccc3e3-1420-4127-b3e7-4f5d38def3bb"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#69c85224-64c2-438b-95d4-b52ecd5986fb');
+var element = $('#38ccc3e3-1420-4127-b3e7-4f5d38def3bb');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "17c903129cba48eda649aa8125b35de2", "version_major": 2, "version_minor": 0}
@@ -15308,10 +15308,10 @@ var element = $('#69c85224-64c2-438b-95d4-b52ecd5986fb');
 
  
  
-<div id="acff2f16-c201-4b02-9e98-f9adecbd9695"></div>
+<div id="047897cf-2ab6-4e04-8e72-2c09d2e28e02"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#acff2f16-c201-4b02-9e98-f9adecbd9695');
+var element = $('#047897cf-2ab6-4e04-8e72-2c09d2e28e02');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "2f605001eacd447fb5c1fa91a8ba333f", "version_major": 2, "version_minor": 0}
@@ -15330,10 +15330,10 @@ var element = $('#acff2f16-c201-4b02-9e98-f9adecbd9695');
 
  
  
-<div id="a02fd6d7-f1be-4579-bcc1-9ab7d0b5f530"></div>
+<div id="fe72ce1a-e3ec-45b4-a0c0-6d90a9f1c9dc"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#a02fd6d7-f1be-4579-bcc1-9ab7d0b5f530');
+var element = $('#fe72ce1a-e3ec-45b4-a0c0-6d90a9f1c9dc');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "f60de3fd068f48f0aecbf747acbf05af", "version_major": 2, "version_minor": 0}
@@ -15397,10 +15397,10 @@ var element = $('#a02fd6d7-f1be-4579-bcc1-9ab7d0b5f530');
 
  
  
-<div id="b8f0878f-5e21-43f7-8e45-caddb942b9f4"></div>
+<div id="a9507e37-1b0f-4800-b5e8-0b0cb2530614"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#b8f0878f-5e21-43f7-8e45-caddb942b9f4');
+var element = $('#a9507e37-1b0f-4800-b5e8-0b0cb2530614');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "cd0cb0eb50594250ba9d722981446e57", "version_major": 2, "version_minor": 0}
@@ -15462,10 +15462,10 @@ var element = $('#b8f0878f-5e21-43f7-8e45-caddb942b9f4');
 
  
  
-<div id="0057894d-c74d-4dda-9622-e07976b0bf95"></div>
+<div id="e43787a2-de42-489d-b6b1-2328736ab586"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#0057894d-c74d-4dda-9622-e07976b0bf95');
+var element = $('#e43787a2-de42-489d-b6b1-2328736ab586');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "bba0c9f44a5a4090a7ed64acfa86f588", "version_major": 2, "version_minor": 0}
@@ -15600,10 +15600,10 @@ Requirement already satisfied: notebook&gt;=4.4.1 in /Users/nielsond/miniconda3/
 
  
  
-<div id="3c1453a2-3447-483c-97bf-02f3cc8bf72b"></div>
+<div id="fa66ca8d-92d1-4e97-9a37-b61169e41583"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#3c1453a2-3447-483c-97bf-02f3cc8bf72b');
+var element = $('#fa66ca8d-92d1-4e97-9a37-b61169e41583');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "76145823a7894db89a300363dba2d946", "version_major": 2, "version_minor": 0}
@@ -15647,10 +15647,10 @@ var element = $('#3c1453a2-3447-483c-97bf-02f3cc8bf72b');
 
  
  
-<div id="9b81d8f9-9599-4e24-a162-790c23616078"></div>
+<div id="14d0eea6-f385-493d-86a6-72773b5a38cf"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#9b81d8f9-9599-4e24-a162-790c23616078');
+var element = $('#14d0eea6-f385-493d-86a6-72773b5a38cf');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "95668dc5234642b591bc57cb67d28449", "version_major": 2, "version_minor": 0}
@@ -15715,6 +15715,28 @@ Pkg.build(&#34;IJulia&#34;)
 </div>
 </div>
 
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>Use a writefile magic to write the output of the above cell to a file called install_ijulia.jl</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+
+</div>
 </div>
 </div>
 
